--- a/proxy/flow.yml
+++ b/proxy/flow.yml
@@ -36,12 +36,11 @@ services:
     networks:
       - proxy
     environment:
-      - DOMAIN_1=('admin.lascuolaopensource.xyz')
-      - DOMAIN_2=('pandev.lascuolaopensource.xyz')
-      - DOMAIN_3=('portainer.lascuolaopensource.xyz')
+      - DOMAIN_1=('pad.lascuolaopensource.xyz')
+      - DOMAIN_2=('tools.lascuolaopensource.xyz')
       - CERTBOT_EMAIL=info@lascuolaopensource.xyz
       - PROXY_ADDRESS=proxy
-      - CERTBOTMODE=staging
+      #- CERTBOTMODE=staging
       - CERTBOT_CRON_RENEW=('0 3 * * *' '0 15 * * *')
     volumes:
           - /etc/letsencrypt:/etc/letsencrypt
@@ -52,10 +51,11 @@ services:
         - com.df.distribute=true
         - com.df.port=80
       placement:
-        constraints: [node.id == <swarm-leader>]
+        constraints: [node.hostname == hbfs1]
       replicas: 1
 
 networks:
   proxy:
     external: true
+
 
